new sample for standalone configurer

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>spring-security-saml-sample</module>
         <module>spring-boot-security-saml-demo-dsl</module>
         <module>spring-boot-security-saml-demo-okta</module>
+        <module>spring-boot-security-saml-demo-okta2</module>
         <module>spring-boot-security-saml-demo-props</module>
     </modules>
 
