--- a/spring-boot-security-saml-demo-okta/pom.xml
+++ b/spring-boot-security-saml-demo-okta/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<start-class>com.github.ulisesbocchio.demo.OktaSSODemoApplication</start-class>
 	</properties>
 
 	<dependencies>
