--- a/spring-boot-security-saml-demo-props/src/main/resources/application.properties
+++ b/spring-boot-security-saml-demo-props/src/main/resources/application.properties
@@ -6,7 +6,7 @@ saml.sso.metadata-generator.entity-id=localhost-demo
 saml.sso.default-success-url=/home
 saml.sso.idp-selection-page-url=/idpselection
 saml.sso.logout.default-target-url=/
-saml.sso.idps.metadata-location=classpath:/idp-ssocircle.xml
+saml.sso.idp.metadata-location=classpath:/idp-ssocircle.xml
 saml.sso.metadata-manager.refresh-check-interval=0
 saml.sso.extended-metadata.idp-discovery-enabled=true
 saml.sso.key-manager.private-key-der-location=classpath:/localhost.key.der
