--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <spring.version>4.3.2.RELEASE</spring.version>
         <spring.boot.version>1.4.0.RELEASE</spring.boot.version>
         <spring.security.version>4.1.1.RELEASE</spring.security.version>
         <maven.compiler.version>3.3</maven.compiler.version>
@@ -25,6 +24,7 @@
         <module>spring-security-saml-sample</module>
         <module>spring-boot-security-saml-demo-dsl</module>
         <module>spring-boot-security-saml-demo-okta</module>
+        <module>spring-boot-security-saml-demo-auth0</module>
         <module>spring-boot-security-saml-demo-okta2</module>
         <module>spring-boot-security-saml-demo-props</module>
         <module>spring-boot-security-saml-demo-static-metadata</module>
@@ -101,13 +101,6 @@
     </build>
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-framework-bom</artifactId>
-                <version>${spring.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-bom</artifactId>
