--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <spring.security.version>4.1.1.RELEASE</spring.security.version>
         <maven.compiler.version>3.3</maven.compiler.version>
         <start-class>Application</start-class>
-        <spring.boot.security.saml.version>1.11-SNAPSHOT</spring.boot.security.saml.version>
+        <spring.boot.security.saml.version>1.10</spring.boot.security.saml.version>
     </properties>
 
     <modules>
