--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>spring-boot-security-saml-samples-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.3-SNAPSHOT</version>
-    <name>Spring Boot Security SAML Parent</name>
+    <name>Spring Boot Security SAML Samples Parent</name>
     <description>Parent POM for project that eases Integration between Spring Boot and spring-security-saml through properties and adapters</description>
     <url>https://github.com/ulisesbocchio/spring-boot-security-saml</url>
 
