--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ulisesbocchio</groupId>
@@ -7,7 +8,9 @@
     <packaging>pom</packaging>
     <version>1.3-SNAPSHOT</version>
     <name>Spring Boot Security SAML Samples Parent</name>
-    <description>Parent POM for project that eases Integration between Spring Boot and spring-security-saml through properties and adapters</description>
+    <description>Parent POM for project that eases Integration between Spring Boot and spring-security-saml through
+        properties and adapters
+    </description>
     <url>https://github.com/ulisesbocchio/spring-boot-security-saml</url>
 
     <properties>
@@ -17,7 +20,7 @@
         <spring.security.version>4.1.1.RELEASE</spring.security.version>
         <maven.compiler.version>3.3</maven.compiler.version>
         <start-class>Application</start-class>
-        <spring.boot.security.saml.version>1.12-SNAPSHOT</spring.boot.security.saml.version>
+        <spring.boot.security.saml.version>1.13-SNAPSHOT</spring.boot.security.saml.version>
     </properties>
 
     <modules>
@@ -47,8 +50,8 @@
         <url>https://github.com/ulisesbocchio/spring-boot-security-saml</url>
         <connection>scm:git:git://github.com/ulisesbocchio/spring-boot-security-saml</connection>
         <developerConnection>scm:git:git@github.com:ulisesbocchio/spring-boot-security-saml.git</developerConnection>
-      <tag>spring-boot-security-saml-parent-1.0</tag>
-  </scm>
+        <tag>spring-boot-security-saml-parent-1.0</tag>
+    </scm>
 
     <developers>
         <developer>
