--- a/spring-boot-security-saml-demo-dsl/src/main/resources/application.properties
+++ b/spring-boot-security-saml-demo-dsl/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 security.user.name=user
 security.user.password=password
 logging.level.org.springframework.security.saml= DEBUG
+# Alternatively use below properties to configure the LB context provider
+#saml.sso.context-provider.lb.context-path=/
+#saml.sso.context-provider.lb.include-server-port-in-request-url=true
+#saml.sso.context-provider.lb.scheme=http
+#saml.sso.context-provider.lb.server-name=localhost
+#saml.sso.context-provider.lb.server-port=8080
