--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <spring.boot.version>1.5.11.RELEASE</spring.boot.version>
-        <spring.security.version>4.2.5.RELEASE</spring.security.version>
-        <maven.compiler.version>3.7.0</maven.compiler.version>
+        <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
+        <spring.security.version>5.0.7.RELEASE</spring.security.version>
+        <maven.compiler.version>3.8.0</maven.compiler.version>
         <start-class>Application</start-class>
         <spring.boot.security.saml.version>1.16-SNAPSHOT</spring.boot.security.saml.version>
     </properties>
@@ -52,6 +52,22 @@
         <developerConnection>scm:git:git@github.com:ulisesbocchio/spring-boot-security-saml.git</developerConnection>
         <tag>spring-boot-security-saml-parent-1.0</tag>
     </scm>
+
+    <repositories>
+        <repository>
+            <id>repository.spring.release</id>
+            <name>Spring GA Repository</name>
+            <url>http://repo.spring.io/release</url>
+        </repository>
+        <repository>
+            <id>mulesoft</id>
+            <url>http://repository.mulesoft.org/releases/</url>
+        </repository>
+        <repository>
+            <id>alfresco</id>
+            <url>https://artifacts.alfresco.com/nexus/content/repositories/public/</url>
+        </repository>
+    </repositories>
 
     <developers>
         <developer>
